--- a/myApp/src/app/component/prompt-input/prompt-input.component.html
+++ b/myApp/src/app/component/prompt-input/prompt-input.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <input type="text" [(ngModel)]="userInput" placeholder="enter a prompt">
-    <button type="button">Generate</button>
+    <button type="button" (click)="generatePrompt()">Generate</button>
 </div>
