--- a/myApp/src/app/component/prompt-response/prompt-response.component.html
+++ b/myApp/src/app/component/prompt-response/prompt-response.component.html
@@ -1,1 +1,8 @@
-<p>prompt-response works!</p>
+<div *ngIf="prompt | async as data">
+    <ul *ngFor="let item of data.prompts; let i= index" class="list">
+        <li class="mb-1"><strong>{{ i + 1 }}.{{item.prompt}}</strong></li>
+        <li><strong>Ans:</strong><ngx-typed-js [strings]="[item.response]" [typeSpeed]="20" [startDelay]="i * 500" [showCursor]="false">
+            <span class="typing"></span>
+        </ngx-typed-js></li>
+    </ul>
+</div>
